# ipr

./: .clang-format  CMakeLists.txt  main.cpp
include/ipr/: impl  interface  io
src/: impl.cxx  io.cxx
test/: CMakeLists.txt
test/hello/: IprTest.cpp
test/sema/: SemaTest.cpp  main.cpp
test/templ/: TemplTest.cpp
